--- a/vue/src/common/styles/index.scss
+++ b/vue/src/common/styles/index.scss
@@ -1,5 +1,8 @@
 $bgColor: #f5f6f7; //背景颜色
-$div_bgColor: #fff; 
-$tb_color: #f40;  // 淘宝红  
+$div_bgColor: #fff;
+$tb_color: #f40; // 淘宝红
 $jd_color: #e4393c; // 京东红
-$diy_gary: #848181;  // 灰色
+$diy_gary: #848181; // 灰色
+$diy_blue: #157dcf; 
+
+$border_bottom: 1px solid rgba(0, 0, 0, 0.1);
