--- a/vue/src/common/styles/index.scss
+++ b/vue/src/common/styles/index.scss
@@ -3,6 +3,27 @@ $div_bgColor: #fff;
 $tb_color: #f40; // 淘宝红
 $jd_color: #e4393c; // 京东红
 $diy_gary: #848181; // 灰色
-$diy_blue: #157dcf; 
+$diy_blue: #157dcf; // diy 蓝色
 
 $border_bottom: 1px solid rgba(0, 0, 0, 0.1);
+
+// 定义一下容器的样式
+@mixin content_style {
+  margin: 1rem auto 0;
+  width: 60%;
+  background-color: $div_bgColor;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.05);
+  padding: 1rem;
+  box-sizing: border-box;
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    margin: 0;
+  }
+}
+
+// hover 事件显示鼠标样式
+@mixin hover_style {
+  &:hover {
+    cursor: pointer;
+  }
+}
