--- a/vue/src/common/styles/index.scss
+++ b/vue/src/common/styles/index.scss
@@ -4,6 +4,7 @@ $tb_color: #f40; // 淘宝红
 $jd_color: #e4393c; // 京东红
 $diy_gary: #848181; // 灰色
 $diy_blue: #157dcf; // diy 蓝色
+$diy_darkGary: #504e4e; // 深灰色
 
 $border_bottom: 1px solid rgba(0, 0, 0, 0.1);
 
