--- a/vue/src/common/styles/index.scss
+++ b/vue/src/common/styles/index.scss
@@ -5,6 +5,9 @@ $jd_color: #e4393c; // 京东红
 $diy_gary: #848181; // 灰色
 $diy_blue: #157dcf; // diy 蓝色
 $diy_darkGary: #504e4e; // 深灰色
+$deep_black: #393d49; // 更深灰色
+$blue: #1e9fff; // 蓝色
+$green: #009688; // 绿色
 
 $border_bottom: 1px solid rgba(0, 0, 0, 0.1);
 
