--- a/vue/src/common/styles/index.scss
+++ b/vue/src/common/styles/index.scss
@@ -8,6 +8,7 @@ $diy_darkGary: #504e4e; // 深灰色
 $deep_black: #393d49; // 更深灰色
 $blue: #1e9fff; // 蓝色
 $green: #009688; // 绿色
+$deep_yellow: #dab70d; //深黄色
 
 $border_bottom: 1px solid rgba(0, 0, 0, 0.1);
 
