--- a/vue/src/common/styles/index.scss
+++ b/vue/src/common/styles/index.scss
@@ -11,6 +11,7 @@ $deep_blue: #0db6c7; //深蓝色
 $green: #009688; // 绿色
 $deep_yellow: #dab70d; //深黄色
 $purple: #d908dc; // 紫色
+$black: #000; // 黑色
 
 $border_bottom: 1px solid rgba(0, 0, 0, 0.1);
 
